--- a/actividad-clase4.html
+++ b/actividad-clase4.html
@@ -86,9 +86,9 @@ th {
 <h2>🪜 1. Interacciones entre Servicios</h2>
 
 <p><strong>Interacción 1</strong></p>
-<label>Servicio que envía:</label> Servicio de reservas.
+<label>Servicio que envía:</label> Servicio de usuario.
 <div class="line"></div>
-<label>Servicio que recibe:</label> Servicio de autenticación.
+<label>Servicio que recibe:</label> Servicio de reservas.
 <div class="line"></div>
 <label>Información enviada:</label> Credenciales de usuario.
 <div class="line"></div>
@@ -97,9 +97,9 @@ th {
 <br>
 <p><strong>Interacción 2</strong></p>
 <div class="line"></div>
-<label>Servicio que envía:</label> Servicio de reservas.
+<label>Servicio que envía:</label> Servicio de catalogo.
 <div class="line"></div>
-<label>Servicio que recibe:</label> Servicio de catalogo.
+<label>Servicio que recibe:</label> Servicio de reservas.
 <div class="line"></div>
 <label>Información enviada:</label> ID del tour, y número de cupos.
 <div class="line"></div>
@@ -129,7 +129,7 @@ th {
 <th>¿Por qué?</th>a
 </tr>
 <tr>
-<td>1. Autenticación</td>
+<td>1. Usuarios</td>
 <td>X</td>
 <td></td>
 <td>El servicio necesita saber en ese mismo momento que permisos tiene el usuario para poder realizar el proceso.</td>
@@ -160,7 +160,7 @@ th {
 <th>Justificación</th>
 </tr>
 <tr>
-<td>1. Autenticación</td>
+<td>1. Usuarios</td>
 <td>X</td>
 <td></td>
 <td>El sistema depende de esta respuesta para poder continuar al siguiente paso.</td>
@@ -189,32 +189,43 @@ th {
 
 <div class="section">
 <h2>🪜 5. Análisis de Fallos</h2>
-<label>Servicio más crítico:</label> Servicio de usuarios.
+<label>Servicio más crítico:</label> Servicio de usuarios / Servicio de reservas.
 <div class="line"></div>
 <label>¿Qué pasaría si falla?</label> Ningún usuario podría entrar al sistema ni realizar compras, quedando el sistema inutilizable.
 <div class="line"></div>
 <label>¿El sistema debe detenerse o continuar?</label> Debe detenerse, ya que los clientes solo podrán visualizar los tours, sin poder ingresar o reservar.
 <div class="line"></div>
-<label>¿Cómo podrían manejar este fallo?</label> 
+<label>¿Cómo podrían manejar este fallo?</label> Implementando un Circuit Breaker que muestre un mensaje amigable de mantenimiento en lugar de un error de sistema. Otra opción es tener un servicio de respaldo, que sirva como balanceador de cargas, y que reciba las peticiones mientras el servicio principal esta caido.
 <div class="line"></div>
 </div>
 
 <div class="section">
 <h2>🪜 6. Service Discovery</h2>
-<label>¿Qué problema ocurre si cambia la IP de un servicio?</label>
+<label>¿Qué problema ocurre si cambia la IP de un servicio?</label> Los demás servicios perderían la conexión, ya que estarían intentando hablar con una dirección IP que ya no existe.
 <div class="line"></div>
-<label>¿Cómo sabría un servicio dónde encontrar otro?</label>
+<label>¿Cómo sabría un servicio dónde encontrar otro?</label> Consultando a un Service Discovery, donde cada servicio se registra automáticamente al iniciar, y aunque cambie su IP, aun los puede encontrar.
 <div class="line"></div>
-<label>¿Por qué sería útil Service Discovery?</label>
+<label>¿Por qué sería útil Service Discovery?</label> Esto permitiria que TourFer escale automáticamente, puesto que, si se crean replicas de servicios para un balanceo de cargas o para el manejo de un error, el sistema las encontrará y usará sin configuración manual.
 <div class="line"></div>
-<label>¿Dónde lo aplicarían en su sistema?</label>
+<label>¿Dónde lo aplicarían en su sistema?</label> Se aplicaria en el API Gateway, para que este siempre sepa a qué servidor interno redirigir el tráfico
 <div class="line"></div>
 </div>
 
 <div class="section">
 <h2>🪜 7. Mini Diagrama</h2>
 <p>Dibujen:</p>
-<p><strong>Servicio A → Service Discovery → Servicio B</strong></p>
+<p><strong>
+[Servicio de Reservas] <---> [Service Discovery] <---> [Servicio de Catalogo]
+</strong></p>
+<br>
+<p><strong>
+[Servicio de Reservas] <---> [Service Discovery] <---> [Servicio de Usuarios]
+</strong></p>
+<br>
+<p><strong>
+[Servicio de Reservas] ---> [Service Discovery] ---> [Servicio de notificaciones]
+</strong></p>
+
 </div>
 
 <div class="note">
